# pantagruel

./: .codecov.yml  .coderabbit.yaml  .gitignore  .lefthook.yml  .pantagruel.jdn  AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  dune  dune-project  justfile  lefthook.yml  lockfile.jdn  mix.exs  pantagruel-wasm.opam  pantagruel.janet  pantagruel.opam  project.janet  pseudocode.nimble  style.css
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: pantagruel.rb  pantagruel.rb.template
config/: config.exs
fuzz/: README.md  dune  fuzz_lexer.ml  fuzz_parser.ml  fuzz_pipeline.ml  fuzz_smt.ml
gameplans/: bindlib-migration.json  ts2pant-fixed-point-while-lowering.json  ts2pant-general-calls.json  ts2pant-general-loop-contract.json  ts2pant-ir1-substitution.json  ts2pant-l2-typed-mirror.json  ts2pant-m4-equality-nullish.json  ts2pant.json
html/: dune  main.ml
lib/: ast.ml  binder.ml  binder.mli  binder_box.ml  binder_mbinder.ml  binder_var.ml  check.ml  check.mli  cli_errors.ml  cli_errors.mli  collect.ml  collect.mli  doc_comment_positions.ml  doc_comment_positions.mli  doc_comments.ml  dune  env.ml  env.mli  error.ml  html_title.ml  html_title.mli  json_output.ml  json_output.mli  lexer.ml  lexer_tokens.ml  lexer_tokens.mli  lower_aliases.ml  markdown_output.ml  markdown_output.mli  module.ml  module_header.ml  module_header.mli  normalize.ml  pantagruel.ex  parser.mly  pretty.ml  pretty.mli  smt.ml  smt_doc.ml  smt_doc.mli  (+22 more)
lib/bool_alg/: bool_alg.ex  macros.ex  protocols.ex
lib/pantagruel/: env.ex  eval.ex  format.ex  guards.ex  load.ex  macros.ex  module.ex  parse.ex  print.ex  scan.ex  shell.ex  values.ex
lib/term_elimination/: term_elimination.ex
lib_parser/: dune
logexian/: README.md  mix.exs
logexian/config/: config.exs
logexian/lib/: logexian.ex
logexian/test/: logexian_test.exs  scan_test.exs
notes/: model-checking-notes  self-specification-session.md
pantagruel/: .gitignore  engine.janet  lexer.janet  parser.janet  print-src.janet  stdlib.janet  type-checker.janet  types.janet
pantagruel/eval/: engine.janet  type-checking.janet
pantagruel/lib/: pantagruel.ex
pantagruel/priv/: scratch.pant
pantagruel/test/: logexian_test.exs  parse_exp_test.exs  parse_test.exs
pantagruel/types/: checker.janet  errors.janet  gcd.janet  literals.janet  resolution.janet  syntactic-types.janet  type-checking.janet  types.janet  utils.janet
priv/: a_full_specification.md  app.pant  app.pant.error  arithmetic.pant  binding.pant  cards-case-branches.pant  cards-case-branches.pant.error  cards-case-rank.pant  cards-case-rank.pant.error  cards.pant  case-with-any.pant  case-with-expr.pant  checkout.pant  comprehensions.pant  concat.pant  do.pant  domain-reference.pant  exact-values.pant  expense_calculation.md  expense_calculation.pant  expenses.csv  expenses.py  extend.pant  extend.pant.error  fib.pant  import.pant  malformed.pant  procedure-type.pant  promotion.pant  reference.md  references.pant  scratch.pant  thunk-application.pant  unary.pant  update.pant
samples/: 01-basics.pant  02-library.pant  03-types.pant  04-operators.pant  05-state.pant  06-advanced.pant  07-pantagruel.pant  08-contexts.pant  09-closure.pant  10-cond.pant  11-over-each.pant  game.pant
samples/js-stdlib/: JS_ARRAY.pant  JS_MAP.pant  JS_MATH.pant  JS_STRING.pant  TS_PRELUDE.pant
samples/smt-examples/: contradiction.pant  dead-operation.pant  deadlock.pant  false-alarm.pant  guarded-frame.pant  init-impossible.pant  init-ok.pant  init-violation.pant  invariant-contradiction.pant  invariant-violation.pant  mu-search-ok.pant  non-exhaustive-cond.pant  over-each-ok.pant  underspecified.pant
scripts/: on_worktree_create
src/: lexer.erl  lexer.xrl  pant_lexer.xrl  pant_parser.yrl  parser.yrl  pseudocode.nim
test/: bool_test.ex  dune  engine-test.janet  eval_test.exs  integration.janet  lexer_test.exs  lexer_test.janet  lifter_test.exs  parse_exp_test.exs  parse_test.exs  parser_test.exs  parser_test.janet  print_test.exs  scan_test.exs  smt_check.ml  smt_check.mli  test_ast_core.ml  test_binder_core.ml  test_check.ml  test_check_core.ml  test_cli_state.ml  test_collect_core.ml  test_doc_comments_state.ml  test_e2e.ml  test_env_core.ml  test_error.ml  test_html_title_core.ml  test_json_output.ml  test_lexer.ml  test_lexer_state.ml  test_lexer_tokens_core.ml  test_lower_aliases.ml  test_markdown.ml  test_module.ml  test_module_header_core.ml  test_normalize.ml  test_normalize_core.ml  test_parser.ml  test_pretty.ml  test_smt.ml  (+17 more)
test/regression/: bug_action_body_rule_params.pant  bug_action_param_shadows_rule.pant  bug_card_zero.pant  bug_list_index_check.pant  bug_nested_binder_collision.pant  bug_overquantify.pant  bug_rename_app_head.pant  bug_rule_param_collision.pant  bug_set_string_precheck_timeout.pant  expected_failures.txt  free_vars.baseline
test/snapshots/json/: 01-basics.json  02-library.json  03-types.json  04-operators.json  05-state.json  06-advanced.json  07-pantagruel.json  08-contexts.json  09-closure.json  10-cond.json  game.json
test/snapshots/markdown/: 01-basics.md  02-library.md  03-types.md  04-operators.md  05-state.md  06-advanced.md  07-pantagruel.md  08-contexts.md  09-closure.md  10-cond.md  game.md
test/snapshots/pretty/: 01-basics.pant  02-library.pant  03-types.pant  04-operators.pant  05-state.pant  06-advanced.pant  07-pantagruel.pant  08-contexts.pant  09-closure.pant  10-cond.pant  game.pant
tests/: test1.nim
tools/ts2pant/: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  (+1 more)
wasm/: dune  pant_wasm.ml
workstreams/: m3-cutover-analysis.md  ts2pant-any-unknown-opaque.md  ts2pant-body-completeness.md  ts2pant-discriminated-union.md  ts2pant-free-call-decl-synthesis.md  ts2pant-general-loop-ssa.md  ts2pant-guard-analysis.md  ts2pant-imperative-ir.md  ts2pant-ir1-ssa.md  ts2pant-ir1-ssa.pant  ts2pant-ir1-substitution.md  ts2pant-l2-typed-mirror.md  ts2pant-local-binding-ssa.md
(+291 files in other folders)
