; Fuzzing targets — requires crowbar.
; Built separately from the main library. To run with AFL:
;   opam install crowbar
;   dune build fuzz/fuzz_lexer.exe
;   mkdir -p corpus findings
;   cp samples/*.pant corpus/
;   afl-fuzz -i corpus -o findings -- ./_build/default/fuzz/fuzz_lexer.exe @@
;
; Without AFL, crowbar runs in QuickCheck mode (random inputs).

(executable
 (name fuzz_lexer)
 (libraries pantagruel crowbar))

(executable
 (name fuzz_parser)
 (libraries pantagruel crowbar))

(executable
 (name fuzz_pipeline)
 (libraries pantagruel crowbar))

(executable
 (name fuzz_smt)
 (libraries pantagruel smt_check crowbar))
