(library
 (name pantagruel_parser)
 (libraries sedlex menhirLib bindlib)
 (preprocess
  (pps sedlex.ppx ppx_deriving.show ppx_deriving.eq)))

(menhir
 (modules parser)
 (flags --explain --table))

(copy_files ../lib/binder.ml)

(copy_files ../lib/binder.mli)

(copy_files ../lib/ast.ml)

(copy_files ../lib/util.ml)

(copy_files ../lib/doc_comments.ml)

(copy_files ../lib/lexer.ml)

(copy_files ../lib/pretty.ml)

(copy_files ../lib/parser.mly)

(copy_files ../lib/types.ml)

(copy_files ../lib/types.mli)

(copy_files ../lib/env.ml)

(copy_files ../lib/env.mli)

(copy_files ../lib/collect.ml)

(copy_files ../lib/collect.mli)

(copy_files ../lib/check.ml)

(copy_files ../lib/check.mli)

(copy_files ../lib/error.ml)

(copy_files ../lib/module.ml)
