(library
 (name test_util)
 (libraries pantagruel alcotest qcheck-alcotest)
 (modules test_util)
 (preprocess
  (pps sedlex.ppx)))

(tests
 (names
  test_lexer
  test_parser
  test_check
  test_markdown
  test_smt
  test_types
  test_pretty
  test_json_output
  test_normalize
  test_e2e
  test_module)
 (modules :standard \ test_util)
 (libraries pantagruel test_util alcotest qcheck-alcotest)
 (deps
  (glob_files ../samples/*.pant)
  (glob_files snapshots/json/*.json)
  (glob_files snapshots/pretty/*.pant)
  (glob_files snapshots/markdown/*.md))
 (preprocess
  (pps sedlex.ppx)))
