(library
 (name test_util)
 (libraries pantagruel alcotest qcheck-alcotest)
 (modules test_util)
 (preprocess
  (pps sedlex.ppx)))

(library
 (name smt_check)
 (libraries pantagruel sexplib0 parsexp)
 (modules smt_check))

(tests
 (names
  test_lexer
  test_parser
  test_check
  test_markdown
  test_smt
  test_types
  test_pretty
  test_json_output
  test_normalize
  test_solver
  test_error
  test_e2e
  test_module
  test_smt_invariants
  test_smt_property
  test_smt_substitution)
 (modules :standard \ test_util smt_check)
 (libraries pantagruel test_util smt_check alcotest qcheck-alcotest)
 (deps
  (glob_files ../samples/*.pant)
  (glob_files ../samples/smt-examples/*.pant)
  (glob_files snapshots/json/*.json)
  (glob_files snapshots/pretty/*.pant)
  (glob_files snapshots/markdown/*.md)
  (glob_files regression/*.pant)
  regression/expected_failures.txt)
 (preprocess
  (pps sedlex.ppx)))
