(library
 (name test_util)
 (libraries pantagruel alcotest qcheck-alcotest)
 (modules test_util)
 (preprocess
  (pps sedlex.ppx)))

(library
 (name smt_check)
 (libraries pantagruel sexplib0 parsexp)
 (modules smt_check))

(tests
 (names
  test_lexer
  test_ast_core
  test_lexer_tokens_core
  test_lexer_state
  test_parser
  test_check
  test_cli_state
  test_markdown
  test_smt
  test_types
  test_pretty
  test_json_output
  test_normalize
  test_normalize_core
  test_solver
  test_solver_terms
  test_solver_output_core
  test_solver_interpretation_core
  test_doc_comments_state
  test_error
  test_e2e
  test_html_title_core
  test_module
  test_module_header_core
  test_smt_invariants
  test_smt_property
  test_smt_substitution
  test_smt_doc
  test_smt_preamble
  test_smt_types
  test_lower_aliases
  test_env_core
  test_util_core
  test_wasm_document_core
  test_wasm_expr_core
  test_collect_core
  test_check_core)
 (modules :standard \ test_util smt_check)
 (libraries pantagruel test_util smt_check alcotest qcheck-alcotest)
 (deps
  (glob_files ../samples/*.pant)
  (glob_files ../samples/smt-examples/*.pant)
  (glob_files snapshots/json/*.json)
  (glob_files snapshots/pretty/*.pant)
  (glob_files snapshots/markdown/*.md)
  (glob_files regression/*.pant)
  regression/expected_failures.txt
  regression/free_vars.baseline)
 (preprocess
  (pps sedlex.ppx)))
